@@ -5,6 +5,10 @@ Change History
 
 1.3 (unreleased)
 ================
+- Added a logger to log the value of a particular key for all items. Handy
+  when debugging, you can see which path is failing, and good if you want
+  to show progress in a long import.
+  [regebro]
 
 1.2 (2010-03-30)
 ================
